--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "node-sass-chokidar": "^1.3.5",
+    "npm-run-all": "^4.1.5",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-feather": "^1.1.6",
     "react-scripts": "3.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "start": "npm-run-all -p watch-css start-react",
+    "start-react": "react-scripts start",
+    "build-react": "react-scripts build",
+    "build": "npm-run-all -s build-css build-react",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
