--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-feather": "^1.1.6",
+    "react-router": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
