--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-feather": "^1.1.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "react-router-transition": "^1.3.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
